--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 					<p class="text">Текстовое описание задания и требования.</p>
 				</div>
 				<div class="section-content-right-image">
-					<img src="img/6.png" alt="6" title="6">
-					<img src="img/6.png" alt="6" title="6">
-					<img src="img/6.png" alt="6" title="6">
-					<img src="img/6.png" alt="6" title="6">
-					<img src="img/6.png" alt="6" title="6">
-					<img src="img/6.png" alt="6" title="6">
-					<img src="img/6.png" alt="6" title="6">
+					<img src="img/6.jpg" alt="6" title="6">
+					<img src="img/6.jpg" alt="6" title="6">
+					<img src="img/6.jpg" alt="6" title="6">
+					<img src="img/6.jpg" alt="6" title="6">
+					<img src="img/6.jpg" alt="6" title="6">
+					<img src="img/6.jpg" alt="6" title="6">
+					<img src="img/6.jpg" alt="6" title="6">
 				</div>
 				<div class="section-content-right-text">
 					<div class="about-studio">Студия «Пиксель Плюс» разработает полнофункциональный продукт ориентированный на целевую аудиторию и эффективно решающий поставленные перед ним маркетинговые задачи. Опыт работ и использование собственных технологий, позволяет предлагать услугу изготовления сайта в Москве в разумные сроки.</div>
@@ -75,7 +75,24 @@
  	</section>
 	<footer class="section-outer">
 		<div class="section-inner section-footer">
-			<div class="section-footer-list first-list"></div>
+			<div class="section-footer-list first-list">
+				<ul>
+					<li>Пункт 01</li>
+					<li>Пункт 02</li>
+					<li>Пункт 03</li>
+					<li>Пункт 04</li>
+					<li>Пункт 05</li>
+					<li>Пункт 06</li>
+					<li>Пункт 07</li>
+					<li>Пункт 08</li>
+					<li>Пункт 09</li>
+					<li>Пункт 10</li>
+					<li>Пункт 11</li>
+					<li>Пункт 12</li>
+					<li>Пункт 13</li>
+					<li>Пункт 14</li>
+				</ul>
+			</div>
 			<div class="section-footer-list second-list">
 				<ul>
 					<li>Поисковое продвижение сайтов</li>
@@ -91,7 +108,7 @@
 				<div class="block">
 					
 				</div>
-				<div class="image"><img src="img/7.png" alt="7" title="7"></div>
+				<div class="image"><img src="img/13.jpg" alt="7" title="7"></div>
 			</div>
 		</div>	
 	</footer>
