--- a/index.html
+++ b/index.html
@@ -6,111 +6,122 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header class="section-outer">
-		<div class="section-inner  section-header">
-			<div class="section-header-logo"><img src="img/logo.png" alt="logo" title="logo"></div>
-			<div class="section-header-center"></div>
-			<div class="section-header-info">
-					<div class="telephone">+7 (499) 346-21-31</div>
-					<div class="email">manager@pixelplus.ru</div>
-					<div class="website">www.pixelplus.ru</div>
-			</div>
-		</div>
-	</header>
-	<section class="section-outer section-hr">
+<div class="wrapper">
+	<div class="wrapper-inner">
+		<!-- header -->
+		<header class="section-header">
+				<div class="section-header-logo"><img src="img/logo.png" alt="logo" title="logo"></div>
+				<div class="section-header-center"></div>
+				<div class="section-header-info">
+						<div class="telephone">+7 (499) 346-21-31</div>
+						<div class="email">manager@pixelplus.ru</div>
+						<div class="website">www.pixelplus.ru</div>
+				</div>
+		</header>
+		<!-- /header -->
+
+		<!-- hr -->
+	<section class="section-hr">
 	<hr>
  	</section>
-	<section class="section-outer ">
-		<div class="section-inner section-content">
-			<div class="section-content-left">
-			<div class="creation-sites">
-				<p>Создание сайтов</p>
-				<ul>
-					<li>Изготовление сайтов «под ключ»</li>
-					<li>Как мы работаем</li>
-					<li>Интеграция с 1С</li>
-					<li>Поддержка сайтов</li>
-					<li>Создание сайтов на Битрикс</li>
-					<li>Модули Битрикс</li>
-					<li>Купить Битрикс</li>
-					<li>Дизайн сайтов</li>
-					<li>Редизайн сайтов</li>
-					<li>Интернет-магазины</li>
-					<li>Создание логотипов</li>
-					<li>FAQ</li>
-				</ul>
-			</div>
-			<div class="creation-sites-img"><img src="img/7.png" alt="7" title="7"></div>
-			</div>
-			<div class="section-content-right">
-				<div class="psd">
-					<p class="psd-title">PSD файл с макетом. Макет разбит по слоям и сгрупированн по папкам: </p>
-					<ul class="psd-list">
-						<li class="psd-list-element"><span>number</span>- нумерация блоков (номера блоков верстать не нужно)</li>
-						<li class="psd-list-element"><span>text</span>- текстовые блоки (шрифт Arial, размер 14 пикселей, межстрочное растояние 22 пикселя)</li>
-						<li class="psd-list-element"><span>head</span>- шапка сайта</li>
-						<li class="psd-list-element"><span>content</span>- контентная область, которая в свою очередь делится на <span>left</span>  и <span>center</span> </li>
-					</ul>
-					<p class="text">Текстовое описание задания и требования.</p>
-				</div>
-				<div class="section-content-right-image">
-					<img src="img/6.jpg" alt="6" title="6">
-					<img src="img/6.jpg" alt="6" title="6">
-					<img src="img/6.jpg" alt="6" title="6">
-					<img src="img/6.jpg" alt="6" title="6">
-					<img src="img/6.jpg" alt="6" title="6">
-					<img src="img/6.jpg" alt="6" title="6">
-					<img src="img/6.jpg" alt="6" title="6">
-				</div>
-				<div class="section-content-right-text">
-					<div class="about-studio">Студия «Пиксель Плюс» разработает полнофункциональный продукт ориентированный на целевую аудиторию и эффективно решающий поставленные перед ним маркетинговые задачи. Опыт работ и использование собственных технологий, позволяет предлагать услугу изготовления сайта в Москве в разумные сроки.</div>
-					<div class="about-studio">Поисковое продвижение (раскрутка) ведется по коммерческим запросам, что позволяет многократно увеличить количество продаж с сайта при разумном рекламном бюджете.
-					</div>
-				</div>
-			</div>	
+ 		<!-- /hr -->
+
+ 		<!-- content -->
+	<section class=" section-content">
+		<div class="section-content-left">
+		<div class="creation-sites">
+			<p>Создание сайтов</p>
+			<ul>
+				<li>Изготовление сайтов «под ключ»</li>
+				<li>Как мы работаем</li>
+				<li>Интеграция с 1С</li>
+				<li>Поддержка сайтов</li>
+				<li>Создание сайтов на Битрикс</li>
+				<li>Модули Битрикс</li>
+				<li>Купить Битрикс</li>
+				<li>Дизайн сайтов</li>
+				<li>Редизайн сайтов</li>
+				<li>Интернет-магазины</li>
+				<li>Создание логотипов</li>
+				<li>FAQ</li>
+			</ul>
 		</div>
-	</section>
-	<section class="section-outer section-hr">
-	<hr>
- 	</section>
-	<footer class="section-outer">
-		<div class="section-inner section-footer">
-			<div class="section-footer-list first-list">
-				<ul>
-					<li>Пункт 01</li>
-					<li>Пункт 02</li>
-					<li>Пункт 03</li>
-					<li>Пункт 04</li>
-					<li>Пункт 05</li>
-					<li>Пункт 06</li>
-					<li>Пункт 07</li>
-					<li>Пункт 08</li>
-					<li>Пункт 09</li>
-					<li>Пункт 10</li>
-					<li>Пункт 11</li>
-					<li>Пункт 12</li>
-					<li>Пункт 13</li>
-					<li>Пункт 14</li>
+		<div class="creation-sites-img"><img src="img/7.png" alt="7" title="7"></div>
+		</div>
+		<div class="section-content-right">
+			<div class="psd">
+				<p class="psd-title">PSD файл с макетом. Макет разбит по слоям и сгрупированн по папкам: </p>
+				<ul class="psd-list">
+					<li class="psd-list-element"><span>number</span>- нумерация блоков (номера блоков верстать не нужно)</li>
+					<li class="psd-list-element"><span>text</span>- текстовые блоки (шрифт Arial, размер 14 пикселей, межстрочное растояние 22 пикселя)</li>
+					<li class="psd-list-element"><span>head</span>- шапка сайта</li>
+					<li class="psd-list-element"><span>content</span>- контентная область, которая в свою очередь делится на <span>left</span>  и <span>center</span> </li>
 				</ul>
+				<p class="text">Текстовое описание задания и требования.</p>
 			</div>
-			<div class="section-footer-list second-list">
-				<ul>
-					<li>Поисковое продвижение сайтов</li>
-					<li>Тариф «Старт»</li>
-					<li>Тариф «Продвижение Плюс»</li>
-					<li>Тариф «Интернет-магазин»</li>
-					<li>Тариф «Эксклюзив»</li>
-					<li>Тариф «Контекст + SEO»</li>
-					<li>Тариф «Регион»</li>
-				</ul>
+			<div class="section-content-right-image">
+				<img src="img/6.jpg" alt="6" title="6">
+				<img src="img/6.jpg" alt="6" title="6">
+				<img src="img/6.jpg" alt="6" title="6">
+				<img src="img/6.jpg" alt="6" title="6">
+				<img src="img/6.jpg" alt="6" title="6">
+				<img src="img/6.jpg" alt="6" title="6">
+				<img src="img/6.jpg" alt="6" title="6">
+
 			</div>
-			<div class="section-footer-block">
-				<div class="block">
-					
+			<div class="section-content-right-text">
+				<div class="about-studio">Студия «Пиксель Плюс» разработает полнофункциональный продукт ориентированный на целевую аудиторию и эффективно решающий поставленные перед ним маркетинговые задачи. Опыт работ и использование собственных технологий, позволяет предлагать услугу изготовления сайта в Москве в разумные сроки.</div>
+				<div class="about-studio">Поисковое продвижение (раскрутка) ведется по коммерческим запросам, что позволяет многократно увеличить количество продаж с сайта при разумном рекламном бюджете.
 				</div>
-				<div class="image"><img src="img/13.jpg" alt="7" title="7"></div>
 			</div>
 		</div>	
+	</section>
+	<section class="section-hr">
+	<hr>
+ 	</section>
+ 		<!-- /content -->
+
+ 		<!-- footer -->
+	<footer class="section-footer">
+		<div class="section-footer-list first-list">
+			<ul>
+				<li>Пункт 01</li>
+				<li>Пункт 02</li>
+				<li>Пункт 03</li>
+				<li>Пункт 04</li>
+				<li>Пункт 05</li>
+				<li>Пункт 06</li>
+				<li>Пункт 07</li>
+				<li>Пункт 08</li>
+				<li>Пункт 09</li>
+				<li>Пункт 10</li>
+				<li>Пункт 11</li>
+				<li>Пункт 12</li>
+				<li>Пункт 13</li>
+				<li>Пункт 14</li>
+
+			</ul>
+		</div>
+		<div class="section-footer-list second-list">
+			<ul>
+				<li>Поисковое продвижение сайтов</li>
+				<li>Тариф «Старт»</li>
+				<li>Тариф «Продвижение Плюс»</li>
+				<li>Тариф «Интернет-магазин»</li>
+				<li>Тариф «Эксклюзив»</li>
+				<li>Тариф «Контекст + SEO»</li>
+				<li>Тариф «Регион»</li>
+			</ul>
+		</div>
+		<div class="section-footer-block">
+			<div class="block">
+				
+			</div>
+			<div class="image"><img src="img/13.jpg" alt="7" title="7"></div>
+		</div>	
 	</footer>
+		<!-- /footer -->
+	</div>
+</div>
 </body>
 </html>
